--- a/z1.html
+++ b/z1.html
@@ -13,6 +13,8 @@
         <div id="top">
                 <button id="playAll">Play All</button> 
         </div>
+        <div id="channels"></div>
+        <button id="newChannelBtn">Add new channel</button>
         
         <audio src="sounds/boom.wav" controls id='boom' ></audio>
         <audio src="sounds/clap.wav" controls id='clap'></audio>
