--- a/z1.html
+++ b/z1.html
@@ -18,10 +18,13 @@
         
         <audio src="sounds/boom.wav" controls id='boom' ></audio>
         <audio src="sounds/clap.wav" controls id='clap'></audio>
-        <audio src="sounds/hihat.wav" controls id='hihat'></audio>
+        <audio src="sounds/hihat.wav" controls id='hithat'></audio>
         <audio src="sounds/openhat.wav" controls id='openhat'></audio>
         <audio src="sounds/ride.wav" controls id='ride'></audio>
         <audio src="sounds/kick.wav" controls id='kick'></audio>
+        <audio src="sounds/snare.wav" controls id='snare'></audio>
+        <audio src="sounds/tink.wav" controls id='tink'></audio>
+        <audio src="sounds/tom.wav" controls id='tom'></audio>
     </div>
 
     <script src="script.js"></script>
