sekcaj 'file' w pełni funkcjonalna

--- a/Projekt2/index.html
+++ b/Projekt2/index.html
@@ -15,8 +15,8 @@
                 <div id="file" class="divClosed toolBarOptions">
                     
                     <div class="margin">
-                        <input type="text" id="width" placeholder="width" >
-                        <input type="text" id="height" placeholder="height" >
+                        <input type="number" id="widthInput" placeholder="width" min="1">
+                        <input type="number" id="heightInput" placeholder="height" min="1">
                     </div>
                     <button id="newCanvasBtn" class="margin">New Canvas</button>
                     <button id="openImageBtn" class="margin">Open Image</button>
