--- a/Projekt2/index.html
+++ b/Projekt2/index.html
@@ -31,8 +31,14 @@
                     <div id="colorContainer" class="toolContainer">
                             <button id="colorBTN" class="toolBarBTN">COLOR</button>
                             <div id="color" class="divClosed toolBarOptions">
-                                <input type="color" id="colorInput" class="toolBarOptions" style="width: 98%;" min="0" max="100">
-                                <input type="range" id="opacityInput" class="toolBarOptions slider" style="width: 98%;" min="0" max="1" step="0.01" value="1">
+                                <div>
+                                    Color Picker
+                                    <input type="color" id="colorInput" class="toolBarOptions" style="width: 98%;" min="0" max="100">
+                                </div>
+                                <div>
+                                    Opacity
+                                    <input type="range" id="opacityInput" class="toolBarOptions slider"style="width: 98%;" min="0" max="1" step="0.01" value="1">
+                                </div>
                             </div>
                     </div>
                     <div id="shapeContainer" class="toolContainer">
@@ -54,7 +60,8 @@
 
     </div>
 
-
-    <script src="script.js"></script>
+    <script type="text/javascript" src="canvas.js"></script>
+    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="brush.js"></script>
 </body>
 </html>
