poukładałm kod bo straszny syf był

--- a/Projekt2/index.html
+++ b/Projekt2/index.html
@@ -60,8 +60,10 @@
 
     </div>
 
+    <script type="text/javascript" src="elements.js"></script>
     <script type="text/javascript" src="canvas.js"></script>
-    <script type="text/javascript" src="script.js"></script>
     <script type="text/javascript" src="brush.js"></script>
+    <script type="text/javascript" src="events.js"></script>
+
 </body>
 </html>
