--- a/Projekt2/index.html
+++ b/Projekt2/index.html
@@ -33,17 +33,24 @@
                             <div id="color" class="divClosed toolBarOptions">
                                 <div>
                                     Color Picker
-                                    <input type="color" id="colorInput" class="toolBarOptions" style="width: 98%;" min="0" max="100">
+                                    <input type="color" id="colorInput" class="toolBarOptions"  style="width: 98%;">
                                 </div>
                                 <div>
                                     Opacity
-                                    <input type="range" id="opacityInput" class="toolBarOptions slider"style="width: 98%;" min="0" max="1" step="0.01" value="1">
+                                    <input type="range" id="opacityInput" class="toolBarOptions slider" style="width: 98%;" min="0" max="1" step="0.01" value="1">
                                 </div>
                             </div>
                     </div>
                     <div id="shapeContainer" class="toolContainer">
-                            <button id="shapeBTN" class="toolBarBTN">SHAPE</button>
-                            <div id="shape" class="divClosed toolBarOptions"> sss</div>
+                        <button id="shapeBTN" class="toolBarBTN">SHAPE</button>
+                        <div id="shape" class="divClosed toolBarOptions">
+                            <div class="margin">
+                                <a>Size: </a>
+                                <input type="number" id="sizeInput" min="1" max="1000" value="1" style="width: 100%;">
+                            </div>
+                            <input type="range" id="sizeSlider" class="toolBarOptions" min="1" max="100" value="1">
+
+                        </div>
                     </div>
                 </div>
             </div>
