--- a/Projekt2/index.html
+++ b/Projekt2/index.html
@@ -49,6 +49,13 @@
                                 <input type="number" id="sizeInput" min="1" max="1000" value="1" style="width: 100%;">
                             </div>
                             <input type="range" id="sizeSlider" class="toolBarOptions" min="1" max="100" value="1">
+                            <div class="margin">
+                                <a>Type: </a>
+                                <select id="selectBrush" style="width: 100%;">
+                                        <option value="null">None</option>
+                                        <option value="pencil">Pencil</option>
+                                </select>
+                            </div>
 
                         </div>
                     </div>
@@ -62,7 +69,7 @@
         </div>
 
         <div id="workSpace">
-            <canvas id="myCanvas" width="600" height="400" style="border:1px solid #000000;"></canvas>
+            <canvas id="myCanvas" width="600" height="400"></canvas>
         </div>
 
     </div>
