--- a/Projekt2/index.html
+++ b/Projekt2/index.html
@@ -37,7 +37,7 @@
                                 </div>
                                 <div>
                                     Opacity
-                                    <input type="range" id="opacityInput" class="toolBarOptions slider" style="width: 98%;" min="0" max="1" step="0.01" value="1">
+                                    <input type="range" id="opacityInput" class="toolBarOptions slider" style="width: 98%; background: linear-gradient(0.25turn, rgba(0, 0, 0, 0), rgb(0, 0, 0));" min="0" max="1" step="0.01" value="1">
                                 </div>
                             </div>
                     </div>
@@ -53,7 +53,7 @@
                                 <a>Type: </a>
                                 <select id="selectBrush" style="width: 100%;">
                                         <option value="null">None</option>
-                                        <option value="pencil">Pencil</option>
+                                        <option value="inker">Inker</option>
                                 </select>
                             </div>
 
@@ -64,7 +64,20 @@
             <div id="modificationsContainer" class="toolContainer">
                 
                 <button id="modificationsBTN" class="toolBarBTN">MODIFICATIONS</button>
-                <div id="modifications" class="divClosed toolBarOptions">m <button>no button</button></div>
+                <div id="modifications" class="divClosed toolBarOptions">
+                    <div id="saturationContainer" class="toolContainer">
+                        <button id="saturationBTN" class="toolBarBTN">SATURATION</button>
+                        <div id="saturation" class="divClosed toolBarOptions">
+                            <input type="range" id="redSaturationInput" class="toolBarOptions slider" style="width: 98%; background: linear-gradient(0.25turn, rgba(0, 0, 0, 0), rgb(255, 0, 0));" min="0" max="1" step="0.01" value="0">
+                            <input type="range" id="greenSaturationInput" class="toolBarOptions slider" style="width: 98%; background: linear-gradient(0.25turn, rgba(0, 0, 0, 0), rgb(0, 255, 0));" min="0" max="1" step="0.01" value="0">
+                            <input type="range" id="blueSaturationInput" class="toolBarOptions slider" style="width: 98%; background: linear-gradient(0.25turn, rgba(0, 0, 0, 0), rgb(0, 0, 255));" min="0" max="1" step="0.01" value="0">
+                            <div class="margin">
+                                <button id="cancelSaturationBTN" class="margin" style="width: 100%;">Cancel</button>
+                                <button id="applySaturationBTN" class="margin" style="width: 100%;">Apply</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -77,6 +90,7 @@
     <script type="text/javascript" src="elements.js"></script>
     <script type="text/javascript" src="canvas.js"></script>
     <script type="text/javascript" src="brush.js"></script>
+    <script type="text/javascript" src="modifications.js"></script>
     <script type="text/javascript" src="events.js"></script>
 
 </body>
