--- a/Projekt2/index.html
+++ b/Projekt2/index.html
@@ -68,12 +68,12 @@
                     <div id="saturationContainer" class="toolContainer">
                         <button id="saturationBTN" class="toolBarBTN">SATURATION</button>
                         <div id="saturation" class="divClosed toolBarOptions">
-                            <input type="range" id="redSaturationInput" class="toolBarOptions slider" style="width: 98%; background: linear-gradient(0.25turn, rgba(0, 0, 0, 0), rgb(255, 0, 0));" min="0" max="1" step="0.01" value="0">
-                            <input type="range" id="greenSaturationInput" class="toolBarOptions slider" style="width: 98%; background: linear-gradient(0.25turn, rgba(0, 0, 0, 0), rgb(0, 255, 0));" min="0" max="1" step="0.01" value="0">
-                            <input type="range" id="blueSaturationInput" class="toolBarOptions slider" style="width: 98%; background: linear-gradient(0.25turn, rgba(0, 0, 0, 0), rgb(0, 0, 255));" min="0" max="1" step="0.01" value="0">
+                            <input type="range" id="redSaturationInput" class="toolBarOptions slider" style="width: 98%; background: linear-gradient(0.25turn, rgba(0, 0, 0, 1), rgb(255, 0, 0));" min="0" max="2" step="0.01" value="1">
+                            <input type="range" id="greenSaturationInput" class="toolBarOptions slider" style="width: 98%; background: linear-gradient(0.25turn, rgba(0, 0, 0, 1), rgb(0, 255, 0));" min="0" max="2" step="0.01" value="1">
+                            <input type="range" id="blueSaturationInput" class="toolBarOptions slider" style="width: 98%; background: linear-gradient(0.25turn, rgba(0, 0, 0, 1), rgb(0, 0, 255));" min="0" max="2" step="0.01" value="1">
                             <div class="margin">
-                                <button id="cancelSaturationBTN" class="margin" style="width: 100%;">Cancel</button>
-                                <button id="applySaturationBTN" class="margin" style="width: 100%;">Apply</button>
+                                <button id="cancelModificationsBTN" class="margin" style="width: 100%;">Cancel</button>
+                                <button id="applyModificationsBTN" class="margin" style="width: 100%;">Apply</button>
                             </div>
                         </div>
                     </div>
