dodałem saturation i zrefactorowałem kod.

--- a/Projekt2/index.html
+++ b/Projekt2/index.html
@@ -71,11 +71,11 @@
                             <input type="range" id="redSaturationInput" class="toolBarOptions slider" style="width: 98%; background: linear-gradient(0.25turn, rgba(0, 0, 0, 1), rgb(255, 0, 0));" min="0" max="2" step="0.01" value="1">
                             <input type="range" id="greenSaturationInput" class="toolBarOptions slider" style="width: 98%; background: linear-gradient(0.25turn, rgba(0, 0, 0, 1), rgb(0, 255, 0));" min="0" max="2" step="0.01" value="1">
                             <input type="range" id="blueSaturationInput" class="toolBarOptions slider" style="width: 98%; background: linear-gradient(0.25turn, rgba(0, 0, 0, 1), rgb(0, 0, 255));" min="0" max="2" step="0.01" value="1">
-                            <div class="margin">
-                                <button id="cancelModificationsBTN" class="margin" style="width: 100%;">Cancel</button>
-                                <button id="applyModificationsBTN" class="margin" style="width: 100%;">Apply</button>
-                            </div>
                         </div>
+                    </div>
+                    <div class="margin">
+                        <button id="cancelModificationsBTN" class="margin" style="width: 100%;">Cancel</button>
+                        <button id="applyModificationsBTN" class="margin" style="width: 100%;">Apply</button>
                     </div>
                 </div>
             </div>
@@ -91,6 +91,7 @@
     <script type="text/javascript" src="canvas.js"></script>
     <script type="text/javascript" src="brush.js"></script>
     <script type="text/javascript" src="modifications.js"></script>
+    <script type="text/javascript" src="script.js"></script>
     <script type="text/javascript" src="events.js"></script>
 
 </body>
