--- a/Projekt2/index.html
+++ b/Projekt2/index.html
@@ -73,6 +73,14 @@
                             <input type="range" id="blueSaturationInput" class="toolBarOptions slider" style="width: 98%; background: linear-gradient(0.25turn, rgba(0, 0, 0, 1), rgb(0, 0, 255));" min="0" max="2" step="0.01" value="1">
                         </div>
                     </div>
+
+                    <div id="brightnessContainer" class="toolContainer">
+                        <button id="brightnessBTN" class="toolBarBTN">BRIGHTNESS</button>
+                        <div id="brightness" class="divClosed toolBarOptions">
+                            <input type="range" id="brightnessInput" class="toolBarOptions slider" style="width: 98%; background: linear-gradient(0.25turn, rgba(0, 0, 0, 1), rgb(255, 255, 255));" min="0" max="2" step="0.01" value="1">
+                        </div>
+                    </div>
+
                     <div class="margin">
                         <button id="cancelModificationsBTN" class="margin" style="width: 100%;">Cancel</button>
                         <button id="applyModificationsBTN" class="margin" style="width: 100%;">Apply</button>
