channel blur prawie zrobiony, niektóre linie źle oblicza.

--- a/Projekt2/index.html
+++ b/Projekt2/index.html
@@ -83,15 +83,29 @@
                     <div id="blurContainer" class="toolContainer">
                             <button id="blurBTN" class="toolBarBTNClosed toolBarBTN">BLUR</button>
                             <div id="blur" class="divClosed toolBarOptions">
-                                    <div class="margin">
-                                            <a>Type: </a>
-                                            <select id="selectBrush" style="width: 100%;">
-                                                    <option value="Gaussian_Blue">Gaussian Blur</option>
-                                            </select>
-                                        </div>
-                                <input type="range" id="blurInput" class="toolBarOptions"  min="1" max="10" step="1" value="1">
+                                <div class="margin">
+                                    <a>Type: </a>
+                                    <select id="selectBlurType" style="width: 100%;">
+                                            <option value="Gaussian_Blur">Gaussian Blur</option>
+                                            <option value="Channel_Blur">Channel Blur</option>
+                                    </select>
+                                </div>
+                                <div id="gaussianBlur" class="margin">
+                                    <a>Radiant: </a>
+                                    <input type="range" id="gausianBlurInput" class="toolBarOptions" style="width: 98%;"  min="1" max="10" step="1" value="1">
+                                </div>
+                                <div id="channelBlur">
+                                        <a>Angle: </a>
+                                        <input type="range" id="gausianAngleInput" class="toolBarOptions" style="width: 98%;"  min="1" max="10" step="1" value="1">
+                                        <a>Red Channel: </a>
+                                        <input type="range" id="redChannelInput" class="toolBarOptions slider" style="width: 98%; background: red;"  min="1" max="100" step="1" value="1">
+                                        <a>Green Channel: </a>
+                                        <input type="range" id="greenChannelInput" class="toolBarOptions slider" style="width: 98%; background: rgb(0, 255, 0);"  min="1" max="100" step="1" value="1">
+                                        <a>Blue Channel: </a>
+                                        <input type="range" id="blueChannelInput" class="toolBarOptions slider" style="width: 98%; background: blue;"  min="1" max="100" step="1" value="1">
+                                </div>
                             </div>
-                        </div>
+                    </div>
                     <div class="margin">
                         <button id="cancelModificationsBTN" class="margin" style="width: 100%;">Cancel</button>
                         <button id="applyModificationsBTN" class="margin" style="width: 100%;">Apply</button>
