channel blur zrobiony.

--- a/Projekt2/index.html
+++ b/Projekt2/index.html
@@ -114,6 +114,10 @@
                                             <a>Blue Channel: </a>
                                             <input type="range" id="blueChannelInput" class="toolBarOptions slider" style="width: 98%; background: blue;"  min="1" max="100" step="1" value="1">
                                         </div>
+                                        <div class="margin">
+                                            <a>Opacity Channel: </a>
+                                            <input type="range" id="opacityChannelInput" class="toolBarOptions slider" style="width: 98%; background: white;"  min="1" max="100" step="1" value="1">
+                                        </div>
 
                                 </div>
                             </div>
