dodałem quill pen

--- a/Projekt2/index.html
+++ b/Projekt2/index.html
@@ -54,6 +54,7 @@
                                 <select id="selectBrush" style="width: 100%;">
                                         <option value="null">None</option>
                                         <option value="inker">Inker</option>
+                                        <option value="quillPen">Quill pen</option>
                                 </select>
                             </div>
 
