--- a/Projekt2/index.html
+++ b/Projekt2/index.html
@@ -123,6 +123,15 @@
                                 </div>
                             </div>
                     </div>
+                    <div id="contrastContainer" class="toolContainer">
+                        <button id="contrastBTN" class="toolBarBTNClosed toolBarBTN">CONTRAST</button>
+                        <div id="contrast" class="divClosed toolBarOptions">
+                            <div class="margin">
+                                <a>Value: </a>
+                                <input type="range" id="contrastInput" class="toolBarOptions" style="width: 98%;"  min="0.5" max="3" step="0.01" value="1">
+                            </div>
+                        </div>
+                    </div>
                     <div class="margin">
                         <button id="cancelModificationsBTN" class="margin" style="width: 100%;">Cancel</button>
                         <button id="applyModificationsBTN" class="margin" style="width: 100%;">Apply</button>
