dodałem sepia filter.

--- a/Projekt2/index.html
+++ b/Projekt2/index.html
@@ -132,6 +132,17 @@
                             </div>
                         </div>
                     </div>
+
+                    <div id="sepiaContainer" class="toolContainer">
+                        <button id="sepiaBTN" class="toolBarBTNClosed toolBarBTN">SEPIA FILTER</button>
+                        <div id="sepia" class="divClosed toolBarOptions">
+                            <div class="margin">
+                                <a>Value: </a>
+                                <input type="range" id="sepiaInput" class="toolBarOptions" style="width: 98%;"  min="0" max="1" step="0.01" value="0">
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="margin">
                         <button id="cancelModificationsBTN" class="margin" style="width: 100%;">Cancel</button>
                         <button id="applyModificationsBTN" class="margin" style="width: 100%;">Apply</button>
