--- a/Projekt3/index.html
+++ b/Projekt3/index.html
@@ -17,6 +17,7 @@
     <script type="text/javascript" src="Note.js"></script>
     <script type="text/javascript" src="Board.js"></script>
     <script type="text/javascript" src="DivNote.js"></script>
+    <script type="text/javascript" src="NoteFold.js"></script>
     <script type="text/javascript" src="Script.js"></script>
 </body>
 </html>
