--- a/Projekt3/index.html
+++ b/Projekt3/index.html
@@ -16,6 +16,7 @@
     <script type="text/javascript" src="Elements.js"></script>
     <script type="text/javascript" src="Note.js"></script>
     <script type="text/javascript" src="Board.js"></script>
+    <script type="text/javascript" src="NoteHeader.js"></script>
     <script type="text/javascript" src="DivNote.js"></script>
     <script type="text/javascript" src="NoteFold.js"></script>
     <script type="text/javascript" src="Script.js"></script>
