refactoring. dokończć klasę neteedition.

--- a/Projekt3/index.html
+++ b/Projekt3/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="noteStyles.css">
 </head>
 <body>
-    <div id="boardSpace">
-
+    <div id="boardSpace"></div>
+    <div id="editSpace">
 
     </div>
 
@@ -17,6 +17,7 @@
     <script type="text/javascript" src="Note.js"></script>
     <script type="text/javascript" src="Board.js"></script>
     <script type="text/javascript" src="NoteHeader.js"></script>
+    <script type="text/javascript" src="NoteEdition.js"></script>
     <script type="text/javascript" src="DivNote.js"></script>
     <script type="text/javascript" src="NoteFold.js"></script>
     <script type="text/javascript" src="Script.js"></script>
