enable header and body text editing

--- a/Projekt3/index.html
+++ b/Projekt3/index.html
@@ -10,13 +10,13 @@
 <body>
     <div id="boardSpace"></div>
     <div id="editSpace">
-
     </div>
 
     <script type="text/javascript" src="Elements.js"></script>
     <script type="text/javascript" src="Note.js"></script>
     <script type="text/javascript" src="Board.js"></script>
     <script type="text/javascript" src="NoteHeader.js"></script>
+    <script type="text/javascript" src="NoteMain.js"></script>
     <script type="text/javascript" src="NoteEdition.js"></script>
     <script type="text/javascript" src="DivNote.js"></script>
     <script type="text/javascript" src="NoteFold.js"></script>
