--- a/Projekt3/index.html
+++ b/Projekt3/index.html
@@ -18,6 +18,7 @@
     <script type="text/javascript" src="NoteHeader.js"></script>
     <script type="text/javascript" src="NoteMain.js"></script>
     <script type="text/javascript" src="NoteEdition.js"></script>
+    <script type="text/javascript" src="EditionTools.js"></script>
     <script type="text/javascript" src="DivNote.js"></script>
     <script type="text/javascript" src="NoteFold.js"></script>
     <script type="text/javascript" src="Script.js"></script>
