reminder added but does nothing

--- a/Projekt3/index.html
+++ b/Projekt3/index.html
@@ -15,7 +15,7 @@
             <div id ="editTools" class="editTools shadow">
                 <label for="inportantCheckBox" class="tool"><input type="checkbox" id="inportantCheckBox"> IMPORTANT!</label>
                 <div class="tool">
-                    <a>Color:</a>
+                    <a style="width: 100px;">Color: </a>
                     <select id="colorSelector" style="width: 100%;">
                         <option value="Light Red">Light Red</option>
                         <option value="Light Green">Light Green</option>
@@ -27,7 +27,10 @@
                         <option value="Cyan">Cyan</option>
                     </select>
                 </div>
-
+                <div class="tool">
+                    <a style="width: 100px;">Reminder: </a>
+                    <input id="dataReminder" type="date" style="width: 100%;">
+                </div>
             </div>
         </div>
     </div>
