--- a/Projekt3/index.html
+++ b/Projekt3/index.html
@@ -43,6 +43,7 @@
     <script type="text/javascript" src="NoteEdition.js"></script>
     <script type="text/javascript" src="DivNote.js"></script>
     <script type="text/javascript" src="NoteFold.js"></script>
+    <script type="text/javascript" src="NoteReminder.js"></script>
     <script type="text/javascript" src="Script.js"></script>
 </body>
 </html>
