--- a/Projekt3/index.html
+++ b/Projekt3/index.html
@@ -8,6 +8,23 @@
     <link rel="stylesheet" href="noteStyles.css">
 </head>
 <body>
+    <div id="view">
+        <select id="viewSelector">
+            <option value="all">Show All</option>
+            <option value="important">Show Important</option>
+        </select>
+        <select id="viewColorSelector">
+                <option value="all">All Colors</option>
+                <option value="Light Red">Light Red</option>
+                <option value="Light Green">Light Green</option>
+                <option value="Light Blue">Light Blue</option>
+                <option value="Light Gray">Light Gray</option>
+                <option value="Purple">Purple</option>
+                <option value="Orange">Orange</option>
+                <option value="Red">Red</option>
+                <option value="Cyan">Cyan</option>
+        </select>
+    </div>
     <div id="boardSpace"></div>
     <div id="editSpace">
         <div id="editContainer" class="editContainer">
@@ -31,9 +48,13 @@
                     <a style="width: 100px;">Reminder: </a>
                     <input id="dataReminder" type="date" style="width: 100%;">
                 </div>
+                <div class="tool">
+                    <button id="deleteBTN" style="width: 100%;">Delete</button>
+                </div>
             </div>
         </div>
     </div>
+
 
     <script type="text/javascript" src="Elements.js"></script>
     <script type="text/javascript" src="Note.js"></script>
