ball motion added

--- a/Projekt4/index.html
+++ b/Projekt4/index.html
@@ -10,5 +10,6 @@
 <body>
 
     <script type="text/javascript" src="Ball.js"></script>
+    <script type="text/javascript" src="Game.js"></script>
 </body>
 </html>
