Ball bounces off the walls.

--- a/Projekt4/index.html
+++ b/Projekt4/index.html
@@ -10,6 +10,7 @@
 <body>
 
     <script type="text/javascript" src="Ball.js"></script>
+    <script type="text/javascript" src="Board.js"></script>
     <script type="text/javascript" src="Game.js"></script>
 </body>
 </html>
