user interface added

--- a/Projekt4/index.html
+++ b/Projekt4/index.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="noteStyles.css">
 </head>
 <body>
+    <div id="board">
+
+    </div>
+    <div id="interface">
+        <div id="score">sasa</div>
+        <button id="newGameBTN">NEW GAME</button>
+        <div id="hp">sadddsa</div>
+
+    </div>
 
     <script type="text/javascript" src="Ball.js"></script>
     <script type="text/javascript" src="Aim.js"></script>
