--- a/Projekt4/index.html
+++ b/Projekt4/index.html
@@ -18,6 +18,7 @@
 
     </div>
 
+    <script type="text/javascript" src="Line.js"></script>
     <script type="text/javascript" src="Ball.js"></script>
     <script type="text/javascript" src="Aim.js"></script>
     <script type="text/javascript" src="Board.js"></script>
